--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+COMP345_Project.vcxproj
+COMP345_Project.vcxproj.filters
+main.cpp
