--- a/COMP345_Project.vcxproj
+++ b/COMP345_Project.vcxproj
@@ -127,15 +127,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cards.cpp" />
+    <ClCompile Include="CardsDriver.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="GameEngineDriver.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="map.cpp" />
+    <ClCompile Include="MapDriver.cpp" />
+    <ClCompile Include="MapLoader.cpp" />
     <ClCompile Include="Orders.cpp" />
     <ClCompile Include="OrdersDriver.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerDriver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cards.h" />
+    <ClInclude Include="CardsDriver.h" />
+    <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="GameEngineDriver.h" />
+    <ClInclude Include="map.h" />
+    <ClInclude Include="MapDriver.h" />
+    <ClInclude Include="MapLoader.h" />
     <ClInclude Include="Orders.h" />
+    <ClInclude Include="OrdersDriver.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerDriver.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="gitattributes.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
